--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 #### Nazwa workflow  ###
 name: CI
 
-### wywolanie workflows na push i pull requesty ###
+### wywołanie workflows na push i pull requesty ###
 on:
   push:
     branches: [ main ]
@@ -12,31 +12,46 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      ### odpala ten sam zestaw krokow rownolegle ###
+      ### odpala ten sam zestaw kroków równolegle ###
       matrix:
-        ### przegladarki Playwright ###
+        ### przeglądarki Playwright ###
         browser: [chromium, firefox, webkit]
 
     steps:
       ### checkout kodu z repo ###
       - uses: actions/checkout@v3
 
-      ### ustaw pythona ###
+      ### ustaw Pythona ###
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      ### zainstaluj zaleznosci ###
-      - name: Install dependencies
+      ### instalacja zależności Pythonowych ###
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install playwright pytest
-          python -m playwright install
 
-        ### uruchom testy dla wybranej przegladrki ###
+      ### instalacja zależności systemowych potrzebnych przez wszystkie silniki ###
+      - name: Install Playwright system dependencies
+        run: |
+          # spróbuj użyć wbudowanego skryptu
+          npx playwright install-deps || true
+          # jeśli brakuje, ręcznie dopisz niezbędne biblioteki
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgtk-4-1 libgraphene-1.0-0 libwoff2-1 libvpx6 libevent-2.1-7 libopus0 \
+            gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad \
+            gstreamer1.0-plugins-ugly gstreamer1.0-libav libsecret-1-0 libhyphen0
+
+      ### pobranie silników przeglądarek ###
+      - name: Install Playwright browsers
+        run: python -m playwright install
+
+      ### uruchom testy dla wybranej przeglądarki ###
       - name: Run tests on ${{ matrix.browser }}
         run: pytest -q tests/zgoda_na_cookies.py
-        ### przekazujemy browser jako zmienna srodowiskowa ###
+        ### przekazujemy browser jako zmienna środowiskowa ###
         env:
           BROWSER: ${{ matrix.browser }}
