--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 #### Nazwa workflow  ###
 name: CI
 
-### wywołanie workflows na push i pull requesty ###
+### Wywołanie workflows na push i pull requesty ###
 on:
   push:
     branches: [ main ]
@@ -11,8 +11,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    ### odpala ten sam zestaw kroków równolegle ###
     strategy:
-      ### odpala ten sam zestaw kroków równolegle ###
       matrix:
         ### przeglądarki Playwright ###
         browser: [chromium, firefox, webkit]
@@ -27,23 +28,11 @@ jobs:
         with:
           python-version: '3.11'
 
-      ### instalacja zależności Pythonowych ###
+      ### zainstaluj zależności Pythonowe ###
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install playwright pytest
-
-      ### instalacja zależności systemowych potrzebnych przez wszystkie silniki ###
-      - name: Install Playwright system dependencies
-        run: |
-          # spróbuj użyć wbudowanego skryptu
-          npx playwright install-deps || true
-          # jeśli brakuje, ręcznie dopisz niezbędne biblioteki
-          sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-4-1 libgraphene-1.0-0 libwoff2-1 libvpx6 libevent-2.1-7 libopus0 \
-            gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad \
-            gstreamer1.0-plugins-ugly gstreamer1.0-libav libsecret-1-0 libhyphen0
 
       ### pobranie silników przeglądarek ###
       - name: Install Playwright browsers
@@ -52,6 +41,6 @@ jobs:
       ### uruchom testy dla wybranej przeglądarki ###
       - name: Run tests on ${{ matrix.browser }}
         run: pytest -q tests/zgoda_na_cookies.py
-        ### przekazujemy browser jako zmienna środowiskowa ###
+        ### przekazujemy browser jako zmienną środowiskową ###
         env:
           BROWSER: ${{ matrix.browser }}
