--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 #### Nazwa workflow  ###
 name: CI
 
-### Wywołanie workflows na push i pull requesty ###
+### wywołanie workflows na push i pull requesty ###
 on:
   push:
     branches: [ main ]
@@ -11,9 +11,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
-    ### odpala ten sam zestaw kroków równolegle ###
     strategy:
+      ### odpala ten sam zestaw kroków równolegle ###
       matrix:
         ### przeglądarki Playwright ###
         browser: [chromium, firefox, webkit]
@@ -28,19 +27,20 @@ jobs:
         with:
           python-version: '3.11'
 
-      ### zainstaluj zależności Pythonowe ###
+      ### instalacja zależności Pythonowych ###
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install playwright pytest
 
-      ### pobranie silników przeglądarek ###
-      - name: Install Playwright browsers
+      ### użyj oficjalnego action by zainstalować silniki + zależności systemowe ###
+      - name: Playwright install deps and browsers
+        uses: microsoft/playwright-github-action@v1
         run: python -m playwright install
 
       ### uruchom testy dla wybranej przeglądarki ###
       - name: Run tests on ${{ matrix.browser }}
         run: pytest -q tests/zgoda_na_cookies.py
-        ### przekazujemy browser jako zmienną środowiskową ###
+        ### przekazujemy browser jako zmienna środowiskowa ###
         env:
           BROWSER: ${{ matrix.browser }}
