--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,46 +1,56 @@
-#### Nazwa workflow  ###
-name: CI
+# .github/workflows/ci-playwright.yml
+name: Playwright CI
 
-### wywołanie workflows na push i pull requesty ###
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      ### odpala ten sam zestaw kroków równolegle ###
-      matrix:
-        ### przeglądarki Playwright ###
-        browser: [chromium, firefox, webkit]
 
     steps:
-      ### checkout kodu z repo ###
-      - uses: actions/checkout@v3
+      # 1. Pobierz repo
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      ### ustaw Pythona ###
-      - name: Set up Python
+      # 2. Zainstaluj Node.js (potrzebne do npx)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      # 3. Zainstaluj Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      ### instalacja zależności Pythonowych ###
+      # 4. Zainstaluj zależności Pythonowe
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install playwright pytest
 
-      ### użyj oficjalnego action by zainstalować silniki + zależności systemowe ###
-      - name: Playwright install deps and browsers
+      # 5. Zainstaluj silniki i deps systemowe dla Playwright
+      - name: Install Playwright browsers and deps
         uses: microsoft/playwright-github-action@v1
-        run: python -m playwright install
 
-      ### uruchom testy dla wybranej przeglądarki ###
-      - name: Run tests on ${{ matrix.browser }}
-        run: pytest -q tests/zgoda_na_cookies.py
-        ### przekazujemy browser jako zmienna środowiskowa ###
+      # 6. Uruchom test w Chromium
+      - name: Run test in Chromium
         env:
-          BROWSER: ${{ matrix.browser }}
+          BROWSER: chromium
+        run: pytest -q tests/zgoda_na_cookies.py
+
+      # 7. Uruchom test w Firefox
+      - name: Run test in Firefox
+        env:
+          BROWSER: firefox
+        run: pytest -q tests/zgoda_na_cookies.py
+
+      # 8. Uruchom test w WebKit
+      - name: Run test in WebKit
+        env:
+          BROWSER: webkit
+        run: pytest -q tests/zgoda_na_cookies.py
