--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci-playwright.yml
 name: Playwright CI
 
 on:
@@ -11,45 +10,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Pobierz repo
-      - name: Checkout repository
+      # 1. checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Zainstaluj Node.js (potrzebne do npx)
+      # 2. Setup Node.js (Playwright CLI)
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
 
-      # 3. Zainstaluj Python
+      # 3. Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # 4. Zainstaluj zależności Pythonowe
+      # 4. Install Python deps
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install playwright pytest
 
-      # 5. Zainstaluj silniki i deps systemowe dla Playwright
-      - name: Install Playwright browsers and deps
-        uses: microsoft/playwright-github-action@v1
+      # 5. Install Playwright browsers + system deps in one go
+      - name: Install Playwright browsers and system dependencies
+        run: npx playwright install --with-deps
 
-      # 6. Uruchom test w Chromium
+      # 6. Run test in Chromium
       - name: Run test in Chromium
         env:
           BROWSER: chromium
         run: pytest -q tests/zgoda_na_cookies.py
 
-      # 7. Uruchom test w Firefox
+      # 7. Run test in Firefox
       - name: Run test in Firefox
         env:
           BROWSER: firefox
         run: pytest -q tests/zgoda_na_cookies.py
 
-      # 8. Uruchom test w WebKit
+      # 8. Run test in WebKit
       - name: Run test in WebKit
         env:
           BROWSER: webkit
