--- a/.github/workflows/ci-install-check.yml
+++ b/.github/workflows/ci-install-check.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci-install-check.yml
 name: Install Check
 
 on:
@@ -10,17 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      ### 1. Pobierz kod z repozytorium ###
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      ### 2. Ustaw Python 3.12.4 ###
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.12.4'
 
-      ### 3. Zainstaluj zależności Pythonowe ###
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -29,10 +27,17 @@ jobs:
             playwright==1.52.0 \
             pytest==8.3.5
 
-      ### 4. Pobierz silniki Playwright wraz z zależnościami systemowymi ###
-      - name: Install Playwright browsers and system dependencies
+      - name: Install Playwright browsers and deps
         run: python -m playwright install --with-deps
 
-      ### 5. Zweryfikuj, że katalog z silnikami istnieje ###
-      - name: List installed browsers
-        run: ls -R ~/.cache/ms-playwrigh
+      - name: Dump ~/.cache directory
+        run: |
+          echo "Contents of ~/.cache:"
+          ls -R ~/.cache
+
+      - name: Dump possible Playwright cache dirs
+        run: |
+          for d in ms-playwright playwright ms-playwright-chromium ms-playwright-firefox ms-playwright-webkit; do
+            echo "--- ~/.cache/$d ---"
+            ls -lah ~/.cache/$d || echo "No ~/.cache/$d"
+          done
