--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI on Windows
 
 on:
   push:
@@ -7,37 +7,31 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  test-windows:
+    runs-on: windows-latest
     strategy:
       matrix:
         browser: [chromium, firefox, webkit]
 
     steps:
-      # 1. Ściągamy kod
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Ustawiamy Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
 
-      # 3. Instalujemy zależności Pythona
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install "greenlet>=3.0.3" "playwright==1.52.0" "pytest==8.3.5"
 
-      # 4. Instalujemy przeglądarki i biblioteki systemowe
-      - name: Install Playwright browsers and deps
-        run: npx playwright install --with-deps
+      - name: Install Playwright browsers
+        run: python -m playwright install
 
-      # 5. Ustawiamy zmienną środowiskową BROWSER
       - name: Set BROWSER env
-        run: echo "BROWSER=${{ matrix.browser }}" >> $GITHUB_ENV
+        run: echo "BROWSER=${{ matrix.browser }}" >> $Env:GITHUB_ENV
 
-      # 6. Odpalamy testy
       - name: Run tests on ${{ matrix.browser }}
         run: pytest -q tests/zgoda_na_cookies.py
